ToDo: Explicit interface implementation

--- a/_1000_Playground/_1000_Playground.csproj
+++ b/_1000_Playground/_1000_Playground.csproj
@@ -43,11 +43,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hund.cs" />
+    <Compile Include="I1.cs" />
+    <Compile Include="I2.cs" />
     <Compile Include="ILebewesen.cs" />
     <Compile Include="ISaeugetier.cs" />
     <Compile Include="Katze.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schnecke.cs" />
+    <Compile Include="TestClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
